<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/poolCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/pool"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/electricCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/electric"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/closeToTownCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/close_to_town"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/tvCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/tv"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/bedroomsCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/bedrooms"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/goodViewCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/good_view"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/childrenPoolCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/children_pool"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/waterCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/water_always_available"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/carParkCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/car_park"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/kitchenCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/kitchen"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/houseContactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/housePriceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>