<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/item_transparent_background"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/houseInfoLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/houseImageImageView"
        android:layout_toStartOf="@id/houseImageImageView"
        android:orientation="vertical">

        <TextView
            android:id="@+id/houseNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="مسبح السلام" />

        <TextView
            android:id="@+id/houseAreaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_place"
            android:drawableRight="@drawable/ic_place"
            android:text="@string/area_example"
            android:textColor="@android:color/white" />

        <RatingBar
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/houseImageImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/house_photo"
        tools:src="@drawable/dummy_article_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/houseInfoLinearLayout"
        android:layout_toStartOf="@id/houseInfoLinearLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/isEmptyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="end"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/available"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/housePriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/holo_green_dark"
            tools:text="20000 SYP" />

    </LinearLayout>

</RelativeLayout>